white space no wrap issue

--- a/src/components/DragAndDropField/_dropDownField.module.scss
+++ b/src/components/DragAndDropField/_dropDownField.module.scss
@@ -42,6 +42,10 @@
 .fileName {
 	font-size: 1rem;
 	margin-left: 2rem;
+	max-width: 150px;
+	text-overflow: ellipsis;
+	overflow: hidden;
+	white-space: nowrap;
 }
 .fileThumbnail {
 	height: 8rem;
